Fixed bug where TargetListPanel could be hidden by EVA panel

--- a/esasky-cl/src/main/java/esac/archive/esasky/cl/web/client/view/searchpanel/targetlist/targetListPanel.css
+++ b/esasky-cl/src/main/java/esac/archive/esasky/cl/web/client/view/searchpanel/targetlist/targetListPanel.css
@@ -83,7 +83,7 @@
     width: auto;
     z-index: 50;
     margin-left: 3px;
-    position: fixed;
+    position: absolute;
     top: 75px;
     right: 10px;
 }
